# catapult

./: .commitlintrc.json  .gitignore  .release-please-config.json  .release-please-manifest.json  =0.24.0  =7.0.0  CHANGELOG.md  CLAUDE.md  README.md  config.yaml  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.cursor/: guidelines.md  system-prompt.json
.github/: release-please.json  release-please.yml
.github/workflows/: commit-lint.yml  format-check.yml  lint-check.yml  release-please.yml  test.yml
src/catapult/: __init__.py  argocd_client.py  config.py  event_loop.py  firehydrant_client.py  jira_client.py  main.py  metrics.py
tests/: __init__.py  test_config.py  test_event_loop.py  test_jira_client.py  test_main.py  test_metrics.py
