[metadata]
name = catapult
version = 0.0.0
description = A FastAPI application with Prometheus metrics
long_description = file: README.md
long_description_content_type = text/markdown
requires-python = >=3.12

[options]
packages = find:
package_dir =
    = src
install_requires =
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    prometheus-client>=0.19.0

[options.packages.find]
where = src 